2009-02-20  Jan Arne Petersen  <jpetersen@openismus.com>

	Implement background image caching. Fixes: NB#96528, NB#96532,
	NB#97364, NB#100499.

	* src/Makefile.am: Add new files.
	* src/hd-activate-views-dialog.c (hd_activate_views_dialog_init): Use
	  cached images as thumbnails.
	* src/hd-change-background-dialog.c
	  (hd_change_background_dialog_response): Call into HDBackgrounds to
	  update background.
	* src/hildon-home.c (main): Create HDBackgrounds instance
	* src/hd-backgrounds.c (added):
	* src/hd-backgrounds.h (added): HDBackgrounds cached backgrounds
	  manager.
	* src/hd-background-helper.c (added):
	* src/hd-background-helper.h (added): Async functions to create cached
	  images.

	* debian/changelog: Update.

2009-02-18  Jan Arne Petersen  <jpetersen@openismus.com>

	* src/hd-hildon-home-dbus.c (hd_hildon_home_dbus_init,
	hd_hildon_home_dbus_dispose, select_contacts_clicked_cb): Add call to
	com.nokia.osso_addressbook.add_shortcut. Fixes: NB#102323

2009-02-18  Jan Arne Petersen  <jpetersen@openismus.com>

	* src/hd-applet-manager.c (hd_plugin_info_free,
	  hd_applet_manager_init): Do not leak plugin infos. Fixes: NB#102295
	* src/hd-change-background-dialog.c
	  (hd_change_background_dialog_append_backgrounds): Do not leak
	  strings from key file. Fixes: NB#102298
	* src/hd-incoming-events.c (load_notification_groups): Do not leak
	  key_file and groups_file in error cases. Fixes: NB#102302
	* src/hd-notification-manager.c (hd_notification_manager_call_action,
	  hd_notification_manager_call_dbus_callback): Do not leak D-Bus
	  messages. Fixes: NB#102304
	* src/hd-task-manager.c (hd_task_manager_load_desktop_file): Do not
	  leak desktop_id. Fixes: NB#102296

2009-02-18  Jan Arne Petersen  <jpetersen@openismus.com>

	* src/hd-applet-manager.c (items_configuration_loaded_cb): Fix
	missing error argument (Coverity). Fixes: NB#102259

2009-02-17  Jan Arne Petersen  <jpetersen@openismus.com>
